--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -5,7 +5,7 @@
 <title>登录-单向社交</title>
 <link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/register.css" rel="stylesheet" type="text/css" />
-<script src="javascripts/jquery-1.3.2-vsdoc2.js" type="text/javascript"></script>
+<script src="javascripts/jquery-1.7.min.js" type="text/javascript"></script>
 <script src="javascripts/login.js" type="text/javascript"></script>
 <script src="javascripts/json2.js" type="text/javascript"></script>
 </head>
@@ -15,13 +15,13 @@
 <div id="left">
 <div id="left_top"><h2>登录</h2></div>
 
-<form method="post" action="">
+
 <ul>
 <li><span>邮箱</span><input type="text" id="email" class="required" /></li>
 <li><span>密码</span><input type="password" id="password" class="required"/></li>
-<input type="button" id="login" class="login_btn" value="登录" />
 </ul>
-</form>
+<button id="login" class="login_btn">登录</button>
+
 
 </div>
 <div id="right">
