--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -5,7 +5,7 @@
 <title>单向社交-注册</title>
 <link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/register.css" rel="stylesheet" type="text/css" />
-<script src="javascripts/jquery-1.3.2-vsdoc2.js" language="javascript"></script>
+<script src="javascripts/jquery-1.7.min.js" language="javascript"></script>
 <script src="javascripts/register.js" language="javascript"></script>
 </head>
 
@@ -14,18 +14,16 @@
 <div id="left">
 <div id="left_top"><h2>注册</h2></div>
 
-<form method="post" action="">
 <ul>
 <li><span>邮箱</span><input type="text" id="email" class="required" /></li>
 <li><span>密码</span><input type="password" id="password" class="required" /></li>
 <li><span>确认</span><input type="password" id="passwordagain" class="required" /></li>
-<input type="submit" id="register" class="register_btn" value="注册" />
 </ul>
-</form>
+<button id="register" class="register_btn">注册</button>
 
 </div>
 <div id="right">
-<h5>>已拥有账号？<a href="login.html">直接登录</a></h5>
+<h5>已拥有账号？<a href="login.html">直接登录</a></h5>
 </div>
 <div style="clear:both;"></div>
 </div>
