--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -6,6 +6,7 @@
 <link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/register.css" rel="stylesheet" type="text/css" />
 <script src="javascripts/jquery-1.7.min.js" type="text/javascript"></script>
+<script src="javascripts/jquery.cookie.js" type="text/javascript"></script>
 <script src="javascripts/login.js" type="text/javascript"></script>
 <script src="javascripts/json2.js" type="text/javascript"></script>
 </head>
