--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -6,6 +6,7 @@
 <link href="stylesheets/navi.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
 <script src="javascripts/jquery-1.3.2-vsdoc2.js" type="text/javascript"></script>
+<script src="javascripts/dust-full.min.js" type="text/javascript"></script>
 <script src="javascripts/jquery.cookie.js" type="text/javascript"></script>
 <script src="javascripts/common.js" type="text/javascript"></script>
 <script src="javascripts/home.js" type="text/javascript"></script>
