--- a/WebContent/examples/local/testPhoto.html
+++ b/WebContent/examples/local/testPhoto.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+<script type="text/javascript" src="/scripts/jquery.js"></script>
+<script type="text/javascript">
+	$(document).ready(function() {
+		alert("hello");
+	});
+</script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-	<form action="local/photo/findById.do">
+	<form action="local/photo/findById.do" method="post">
 		<label>根据ID查看图片</label> <br/>
 		<label>ID</label><input type="text" name="id" /> <br/>
 		<input type="submit" value="查看" />
