--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -5,7 +5,7 @@
 <title>单向社交</title>
 <link href="stylesheets/navi.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
-<script src="javascripts/jquery-1.3.2-vsdoc2.js" type="text/javascript"></script>
+<script src="javascripts/jquery-1.7.min.js" type="text/javascript"></script>
 <script src="javascripts/dust-full.min.js" type="text/javascript"></script>
 <script src="javascripts/jquery.cookie.js" type="text/javascript"></script>
 <script src="javascripts/common.js" type="text/javascript"></script>
@@ -52,19 +52,19 @@
 
 <div id="left_content">
 
-<div class="content">
+<!-- <div class="content">
 <img src="images/photo.PNG" />
 <div class="name"><span class="name">凤梨豪</span><span class="state">:老鼠又跑出来了，真可爱</span></div>
 <div class="picture"></div>
 <div class="time"><span class="date">今天00:43</span><span class="resource">来自</span><span class="date"><a href="#">新浪微博</a></span></div>
-</div>
+</div> -->
 
-<div class="content">
-<img src="images/photo.PNG" />
-<div class="name"><span class="name">Zhihao Deng</span><span class="state">:画了个V</span></div>
-<div class="picture"><a href="photo.html"><img src="images/pictureV.PNG" border="none" /></a></div>
-<div class="time"><span class="date">昨天下午6:00</span><span class="resource">来自</span><span class="date"><a href="#">Google+</a></span></div>
-</div>
+<!-- <div class="content">
+<img src="" />
+<div class="name"><span class="name"></span><span class="state">:</span></div>
+<div class="picture"><a href=""><img src="" border="none" /></a></div>
+<div class="time"><span class="date"></span><span class="resource">来自</span><span class="date"><a href="#"></a></span></div>
+</div> -->
 </div>
 </div>
 
